--- a/.github/workflows/master-to-live.yml
+++ b/.github/workflows/master-to-live.yml
@@ -11,6 +11,7 @@ jobs:
         uses: shimataro/ssh-key-action@v2
         with:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
+          known_hosts: ${{ secrets.SSH_HOST }}
       - name: Move plugin directory
         run: cd /home/aamzes/sites/cicd.sitedistrict.com/www/wp-content/plugins/ci-cd-sitedistrict/
       - name: Update from repository
