--- a/.github/workflows/master-to-live.yml
+++ b/.github/workflows/master-to-live.yml
@@ -15,6 +15,6 @@ jobs:
       - name: PWD
         run: cat /etc/hosts
       - name: Move plugin directory
-        run: cd /home/aamzes/sites/cicd.sitedistrict.com/www/wp-content/plugins/ci-cd-sitedistrict/
+        run: cd /home/aamzes && ls -la
       - name: Update from repository
         run: git pull
